Fixed bug introduced in last commit (searchbar switcher visible when url is visited)

--- a/Netscape4/chrome/urlbar.css
+++ b/Netscape4/chrome/urlbar.css
@@ -65,9 +65,6 @@
         height: var(--urlbar-height) !important;
         margin-top: 5px !important;
     }
-    #urlbar-searchmode-switcher {
-        top: 2px !important;
-    }
 }
 
 
